--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -427,6 +427,8 @@ table td { text-overflow: ellipsis; overflow: hidden; max-width: 15em; }
 /*----- ADD YOUR STYLES BELOW -------*/
 .post-content p, .post-content li { font-size: 16px; }
 
+.input_area pre, .input_area div { font-size: 110%; }
+
 .language-python + .language-plaintext { border-left: 1px solid grey; margin-left: 1rem !important; }
 
 [class^="language-"]:not(.language-plaintext) pre, [class^="language-"]:not(.language-plaintext) code { background-color: #323443 !important; color: #f8f8f2; }
